workspaces/tilings-generator/src/snapshots/tiling__transform__tests__from_string_with_invalid_origin_type.snap
---
source: workspaces/tilings/src-rust/tiling/src/./transform_tests.rs
expression: "Transform::from_string(\"r(x1)\".into(), &Shape::Triangle.into())"
---
Err(
    InvalidOriginType {
        origin_type: "x",
        reason: "failed to parse",
    },
)
