workspaces/tilings-generator/src/snapshots/tiling__transform__tests__from_string_with_value_max.snap
---
source: workspaces/tilings/src-rust/tiling/src/./transform_tests.rs
expression: "Transform::from_string(\"r181\".into(), &Shape::Triangle.into())"
---
Err(
    InvalidTransformValue {
        value: "181",
        reason: "must be a multiple of 60 and less than or equal to 180",
    },
)
