workspaces/tilings-generator/src/snapshots/tiling__transform__tests__from_string_with_value_min.snap
---
source: workspaces/tilings/src-rust/tiling/src/./transform_tests.rs
expression: "Transform::from_string(\"r0\".into(), &Shape::Triangle.into())"
---
Err(
    InvalidTransformValue {
        value: "0",
        reason: "must be a multiple of 60 and less than or equal to 180",
    },
)
